Fix issues with layout on tablet

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -123,6 +123,10 @@ body.side-frame .notification {
     padding: 0 1rem;
   }
 
+  #side-panel {
+    position: absolute;
+  }
+
   #side-panel .card {
     display: flex;
     flex-direction: column;
